# ipc

./: .gitignore  .pdm-python  Dockerfile  LICENSE  README.md  broker.service  mdbroker.py  pyproject.toml
archetypes/: MDP.py
ipc/client/: mdcliapi.py
models/: errors.py
src/client/: mdcliapi.py
src/ipc/broker/: __main__.py
src/ipc/client/: __init__.py  mdcliapi.py
src/ipc/worker/: __init__.py  worker.py
src/worker/: mdwrkapi.py
